package nl.saxion;

import nl.saxion.Models.Print;
import nl.saxion.Models.PrintTask;
import nl.saxion.observer.Dashboard;
import nl.saxion.Models.printer.Printer;
import nl.saxion.Models.records.PrintBP;
import nl.saxion.Models.records.PrintTaskBP;
import nl.saxion.Models.records.PrinterBP;
import nl.saxion.Models.records.SpoolBP;
import nl.saxion.managers.PrintManager;
import nl.saxion.managers.PrinterManager;
import nl.saxion.managers.SpoolManager;
import nl.saxion.utils.FilamentType;

import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;

public class Facade {
    private final SpoolManager spoolManager;
    private final PrinterManager printerManager;
    private final PrintManager printManager;
    private final Dashboard dashboard;
    private boolean optimizedSpoolStrategy = false; // Default strategy (raf)

    public Facade() {
        this.spoolManager = new SpoolManager();
        this.printManager = new PrintManager();
        this.printerManager = new PrinterManager(spoolManager);
        this.dashboard = new Dashboard();
        printerManager.addObserver(dashboard);
    }

    /**
     * This method is used to read the data from the files
     */
    public void readData() {
        printerManager.readPrintersFromFile("printers.csv");
        printManager.readPrintsFromFile("prints.csv");
        spoolManager.readSpoolsFromFile("spools.csv");
    }

    /**
     * OPTION : 1
     * This method is used to add the print task
     */
    public void addPrintTask(PrintBP printBP, List<String> colors, FilamentType filamentType) {
        Print print = printManager.findPrint(printBP.name());
        printerManager.addPrintTask(print, colors, filamentType);

    }

    /**
     * OPTION : 2
     * This method is used to register the printer completion
     */
    public boolean registerPrintCompletion(PrinterBP printerBP) {

        Printer printer = printerManager.getRunningPrinterByName(printerBP.printerName());
        PrintTask printTask1 = printerManager.runningPrintTasks.remove(printer);

        if (printTask1 == null) {
            return false;
        }

        printerManager.registerCompletion(printer, printTask1);

        return true;
    }

    /**
     * OPTION : 3
     * This method is used to register the printer failure
     */
    public boolean registerPrinterFailure(PrinterBP printerBP) {
        Printer printer = printerManager.getRunningPrinterByName(printerBP.printerName());
        PrintTask printTask1 = printerManager.runningPrintTasks.remove(printer);

        if (printTask1 == null) {
            return false;
        }

        printerManager.registerFailure(printer, printTask1);
        return true;
    }

    /**
     * OPTION : 4
     * This method is used to change the print strategy
     */
    public void changePrintStrategy(boolean choice) {
        optimizedSpoolStrategy = choice;
    }

    /**
     * OPTION : 5
     * This method is used to start the print queue
     */
    public void initPrintQueue() throws Exception {
        //false = FastestSpoolStrategy
        if (!optimizedSpoolStrategy) {
            printerManager.startFastestSpoolStrategy();
        } else {
            printerManager.startOptimizedSpoolStrategy();
        }
    }

    /**
     * OPTION : 6
     * This method is used to get the prints
     *
     * @return List<PrintBP> prints
     */
    public List<PrintBP> getPrints() {
        return printManager.getPrints().stream()
                .map(print -> new PrintBP(print.getName(), print.getHeight(), print.getWidth(), print.getLength(), print.getFilamentLength(), print.getPrintTime()))
                .toList();
    }

    /**
     * OPTION : 7
     * This method is used to get the printers
     *
     * @return List<PrinterBP> printers
     */
    public List<PrinterBP> getPrinters() {
        return printerManager.printersList.stream()
                .map(printer -> new PrinterBP(printer.getId(), printer.getName(), printer.getModel(), printer.getManufacturer(), printer.getMaxX(), printer.getMaxY(), printer.getMaxZ(), printer.isHoused(), printer.getMaxColors()))
                .toList();
    }

    /**
     * OPTION : 8
     * This method is used to get the spools
     *
     * @return List<SpoolBP> spools
     */
    public List<SpoolBP> getSpools() {
        return spoolManager.getSpools().stream()
                .map(spool -> new SpoolBP(spool.getId(), spool.getColor(), spool.getFilamentType(), spool.getLength()))
                .toList();
    }

    /**
     * OPTION : 9
     * This method is used to get the pending print tasks
     *
     * @return List<PrintTaskBP> pending print tasks
     */
    public List<PrintTaskBP> getPendingPrintTasks() {
        return printerManager.getPendingPrintTasks().stream()
                .map(printTask -> new PrintTaskBP(printTask.getPrint(), printTask.getColors(), printTask.getFilamentType()))
                .toList();
    }

    /**
     * OPTION : 10
     * This method is used to show the dashboard stats
     */
    public int[] showDashboardStats() {
        return dashboard.showDashboard();
    }


    /**
     * This method is used to show the running printers
     *
     * @return List<PrinterBP> running printers
     */
    public List<PrinterBP> showRunningPrinters() {
        return printerManager.runningPrintTasks.keySet().stream()
                .map(printer -> new PrinterBP(printer.getId(), printer.getName(), printer.getModel(), printer.getManufacturer(), printer.getMaxX(), printer.getMaxY(), printer.getMaxZ(), printer.isHoused(), printer.getMaxColors()))
                .toList();

    }

    /**
     * This method is used to get the running print tasks
     *
     * @return List<PrintTaskBP> running print tasks
     */
    public List<PrintTaskBP> getRunningPrintTasks() {
        return printerManager.runningPrintTasks.values().stream()
                .map(printTask -> new PrintTaskBP(printTask.getPrint(), printTask.getColors(), printTask.getFilamentType()))
                .toList();
    }

    /**
     * This method is used to get the print
     *
     * @param printer PrinterBP chosen by the user
     * @return Print print
     */
    public Print getPrint(PrinterBP printer) {
        Printer printer1 = printerManager.getRunningPrinterByName(printer.printerName());
        return printerManager.runningPrintTasks.get(printer1).getPrint();
    }

    /**
     * This method is used to get the optimized spool strategy
     *
     * @return boolean optimized spool strategy
     */
    public boolean getOptimizedSpoolStrategy() {
        return optimizedSpoolStrategy;
    }


    /**
     * This method is used to show the available colors for the filament type
     *
     * @param filamentType FilamentType chosen by the user
     * @return List<String> available colors for the filament type
     */
    public List<String> getAvailableColors(FilamentType filamentType) {
        return spoolManager.getAvailableColors(filamentType);

    }


    public HashMap<PrinterBP, PrintTaskBP> getRunningPrintersAndTasks() {
        HashMap<PrinterBP, PrintTaskBP> runningTasks = new HashMap<>();


        for (Map.Entry<Printer, PrintTask> allRunningTasks : printerManager.runningPrintTasks.entrySet()) {
            Printer printer = allRunningTasks.getKey();
            PrintTask printTask = allRunningTasks.getValue();
            runningTasks.put(new PrinterBP(printer.getId(), printer.getName(), printer.getModel(), printer.getManufacturer(), printer.getMaxX(), printer.getMaxY(), printer.getMaxZ(), printer.isHoused(), printer.getMaxColors()),
                    new PrintTaskBP(printTask.getPrint(), printTask.getColors(), printTask.getFilamentType()));
        }

        return runningTasks;
    }
}
