package nl.saxion.records;

public record Printer(int id, String name, String manufacturer, int maxX, int maxY, int maxZ) {
}
