package nl.saxion.records;

public record Spool() {
}
