@startuml
'https://plantuml.com/sequence-diagram

class Main {

}

class Facade {

}

class PrintManager {

}

class SpoolManager {

}

class PrinterManager {

}

abstract class Printer {

}

class StandardFDM{

}

class MultiColor {

}

class PrinterBP {

}

class SpoolBP {

}

class PrintBP {

}

class PrintTaskBP {

}

class Print {

}

class PrintTask {

}

class Spool {

}


class PrinterFactory {

}

interface PrintTaskObserver {
}

class Dashboard {

}

interface AdapterReader {

}

class CSVAdapterReader {

}

class JSONAdapterReader {

}

Main --> Facade
Facade --> SpoolManager
Facade --> PrintManager
Facade --> PrinterManager
PrintManager --> Print
SpoolManager --> Spool
Spool <-- Printer
PrinterManager --> PrinterFactory
PrinterManager --> SpoolManager
Print --> PrintTask
Printer <|-- StandardFDM
Printer <|-- MultiColor
PrinterManager --> Printer
PrintTaskObserver <|-- Dashboard
PrintTask <--* PrintTaskObserver
Dashboard --> Facade
AdapterReader <|-- CSVAdapterReader
AdapterReader <|-- JSONAdapterReader
AdapterReader --> PrinterManager
AdapterReader --> PrintManager
AdapterReader --> SpoolManager
PrinterBP ..> Main
SpoolBP ..> Main
PrintBP ..> Main
PrintTaskBP ..> Main
PrinterBP ..> Facade
SpoolBP ..> Facade
PrintBP ..> Facade
PrintTaskBP ..> Facade


@enduml